Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T5003235/T5003235c.out
T5003235c.java:15:26: compiler.err.report.access: T5003235c.B, private, T5003235c
1 error
